Preparing to replace chunk renderer